# contact-manager

./: .gitignore  CONTRIBUTING.md  README.md  address_book.py  app.py  app.tcss  main.py  pyproject.toml
contact_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: architecture.md
src/contact_manager/: __init__.py  __main__.py  app.py  exceptions.py
src/contact_manager/config/: __init__.py  settings.py
src/contact_manager/models/: __init__.py  contact.py
src/contact_manager/repositories/: __init__.py  base.py  json_repository.py
src/contact_manager/services/: __init__.py  contact_service.py
src/contact_manager/ui/: __init__.py  app.py  commands.py  screens.py  styles.tcss  widgets.py
src/contact_manager/utils/: __init__.py  validators.py
tests/: conftest.py  test_contact.py  test_contact_service.py  test_json_repository.py  test_ui_app.py  test_validators.py  test_widgets.py
