[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-manager"
version = "1.0.0"
description = "A keyboard-driven contact manager built with Textual"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Timur Manjosov" }]
keywords = ["textual", "tui", "terminal", "contacts", "address-book"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business",
]
dependencies = ["textual>=0.50"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
contacts = "contact_manager.app:main"

[project.urls]
Homepage = "https://github.com/timur-manjosov/contact-manager"
Repository = "https://github.com/timur-manjosov/contact-manager"
Issues = "https://github.com/timur-manjosov/contact-manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
contact_manager = ["ui/*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
